==> SamarEid/Graduation-Project/Baremetal/ADASWithSDV/Core/code/src/communication/communication.c <==
/*
 * communication.c
 *
 *  Created on: ??þ/??þ/????
 *      Author: ASHRY
 */
#include "stm32f4xx_hal.h"
#include "stm32f4xx_hal_gpio.h"
#include "stm32f4xx_hal_spi.h"
#include "./communication.h"

SPI_HandleTypeDef hspi2 = {0};
void communicationVidInit(){
	// initialize GPIO PINS to its alternate function
	GPIO_InitTypeDef GPIO_InitStruct = {0};
	GPIO_InitStruct.Pin = SCLK_PIN | MISO_PIN | MOSI_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = SPI_ALTERNATE_FUNCTION;
	HAL_GPIO_Init(SPI_PORT, &GPIO_InitStruct);

	//initialize ss pin  as output and trigger pin as input
	GPIO_InitStruct.Pin = SS_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(SPI_PORT, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = TRIGGER_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
	HAL_GPIO_Init(SPI_PORT, &GPIO_InitStruct);

	//deselect slave by dafult and pull trigger low
	HAL_GPIO_WritePin(SPI_PORT,TRIGGER_PIN, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(SPI_PORT, SS_PIN, GPIO_PIN_SET);

	//congigure spi as master
	hspi2.Instance = COMMUNICATION_SPI;
	hspi2.Init.Mode = SPI_MODE_MASTER;
	hspi2.Init.Direction = SPI_DIRECTION_2LINES;
	hspi2.Init.DataSize = DATA_SIZE;
	hspi2.Init.CLKPolarity = SPI_POLARITY_LOW;
	hspi2.Init.CLKPhase = SPI_PHASE_1EDGE;
	hspi2.Init.NSS = SPI_NSS_SOFT;
	hspi2.Init.BaudRatePrescaler = BAUD_RATE_PRESCALER;
	hspi2.Init.FirstBit = ENDIAN;
	hspi2.Init.TIMode = SPI_TIMODE_DISABLE;
	hspi2.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	hspi2.Init.CRCPolynomial = 10;
	HAL_SPI_Init(&hspi2);
	__HAL_SPI_ENABLE(&hspi2);
}
void communicationVidSelectSlave(){
	HAL_GPIO_WritePin(SPI_PORT, SS_PIN, GPIO_PIN_RESET);
}
void communicationVidDeselectSlave(){
	while (HAL_SPI_GetState(&hspi2) != HAL_SPI_STATE_READY);
	HAL_GPIO_WritePin(SPI_PORT, SS_PIN, GPIO_PIN_SET);
}
uint8_t communicationCharGetTriggerPinValue(){
	return HAL_GPIO_ReadPin(SPI_PORT, TRIGGER_PIN);
}
